Archive2/24/7d05d67cf176bc/output
main.cpp: In function 'int main()':
main.cpp:8:6: error: 'void*' is not a pointer-to-object type
     *mem = 97;
      ^
main.cpp:9:32: error: 'void*' is not a pointer-to-object type
     cout << static_cast<char>(*mem);
                                ^
main.cpp:11:12: warning: deleting 'void*' is undefined
     delete mem;
            ^
